# wikigame

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
data/: animals.list  countries.list  misc.list  nice_targets.list  sport_targets.list
tests/: test_wikigame.py
wikigame/: __init__.py  __main__.py  convo_mines.py  game.py  wiki.py
wikigame/static/: index.html  mines.html
wikigame/static/css/: common.css  mines.css  style.css
wikigame/static/js/: game.js  store.js  util.js
