[tool.poetry]
name = "wikigame"
version = "0.1.0"
description = ""
authors = ["Martin Zackrisson"]

[tool.poetry.dependencies]
python = "^3.10"
Wikipedia-API = "^0.5.4"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
